style(ui): refine component layout and fix display alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,22 @@
     flex-direction: column;
     gap: 20px;
     height: 100vh;
+    width: 100%;
 }
 
 .wrapper>.app-header {
     flex: 0 0 10%;
+    margin: 0;
+    width: 100%;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px 20px;
 }
 
 .wrapper>.dashboard {
-    flex: 0 0 84%;
+    flex: 0 0 85%;
+    margin: 0;
+    padding: 0 10px;
 }
