--- a/src/components/DashBoard.css
+++ b/src/components/DashBoard.css
@@ -1,8 +1,7 @@
 .dashboard {
     display: flex;
     gap: 20px;
-    width: 98%;
-    margin: 0 auto;
+    width: 100%;
     min-height: 0;
 }
 
@@ -11,14 +10,15 @@
     display: flex;
     flex-direction: column;
     min-height: 0;
+    min-width: 0;
 }
 
 .dashboard-center {
-    flex: 2.2;
+    flex: 2;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     gap: 20px;
+    min-width: 0;
 }
 
 .dashboard-right {
@@ -26,4 +26,5 @@
     display: flex;
     flex-direction: column;
     min-height: 0;
+    min-width: 0;
 }
