--- a/src/components/FieldsPanel.css
+++ b/src/components/FieldsPanel.css
@@ -5,6 +5,7 @@
     flex: 1;
     background-color: #ffffff;
     gap: 20px;
+    width: 100%;
 
     border: rgba(128, 128, 128, 0.3) solid 2px;
     border-radius: 8px;
@@ -31,12 +32,13 @@
     display: flex;
     flex-direction: column;
     gap: 0px;
+    font-size: 0.8rem;
 }
 
 
 .field-card_name {
     color: #333333;
-    font-size: 1.2rem;
+    font-size: 1rem;
     font-weight: 700;
 }
 
@@ -51,7 +53,7 @@
 .field-card_status {
     background-color: #09ba09;
     color: white;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 600;
     width: 80px;
     display: flex;
@@ -80,7 +82,7 @@
 
 
 .field-panel_header {
-    font-size: 1.5rem;
+    font-size: 1.1rem;
     font-weight: 700;
 }
 
