--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -1,7 +1,7 @@
 .select-container {
     display: flex;
     justify-content: space-around;
-    gap: 40px;
+    gap: 20px;
     border: rgba(128, 128, 128, 0.3) solid 2px;
     border-radius: 8px;
     padding: 16px;
@@ -20,7 +20,7 @@
 select,
 option,
 button {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding: 6px 8px;
     border-radius: 4px;
     border: grey solid 1px;
@@ -28,18 +28,19 @@ button {
 }
 
 select {
-    width: 150px;
+    width: 120px;
 }
 
 label {
     font-weight: 600;
+    font-size: 0.8rem;
 }
 
 button {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: 550;
     color: rgb(55, 55, 55);
-    padding: 8px 16px;
+    padding: 7px 16px;
     transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
 }
 
