--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,7 @@
 .app-header {
     background-color: #ffffff;
     box-shadow: 2px 2px 5px rgba(128, 128, 128, 0.5);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px 30px;
+
 }
 
 .app-header_hero {
@@ -13,9 +10,9 @@
 }
 
 .app-header img {
-    width: 50px;
+    width: 38px;
     height: auto;
-    margin-right: 10px;
+    margin-right: 8px;
 }
 
 .app-header_left {
@@ -26,7 +23,10 @@
 
 .app-header_name {
     font-weight: 700;
-    font-size: 2.2rem;
+    font-size: 1.7rem;
+    display: flex;
+    align-items: start;
+    gap: 3px;
 }
 
 .app-header_name_crop {
@@ -54,16 +54,10 @@
     text-decoration: none;
 }
 
-.app-header_name {
-    display: flex;
-    align-items: start;
-    gap: 3px;
-}
-
 .app-header_name_TM {
     font-size: 0.6rem;
     color: #5e6738;
-    margin-top: 10px;
+    margin-top: 8px;
 }
 
 .app-header_navBar {
@@ -78,15 +72,16 @@
 .app-header_navBar button {
     border-radius: 0;
     font-weight: 600;
-    width: 120px;
+    width: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
 
     color: #9eb356;
     background-color: white;
     border: #9eb356 solid 2px;
+    font-size: 0.rem;
 
     transition: all 200ms ease-in-out;
 }
@@ -103,11 +98,11 @@
     border: #9eb356 solid 2px;
     border-radius: 0;
     font-weight: 600;
-    width: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12px 20px;
+    padding: 8px 16px;
+    font-size: 0.8rem;
 
     transition: all 200ms ease-in-out;
 }
