--- a/src/components/MapView.css
+++ b/src/components/MapView.css
@@ -11,11 +11,12 @@
 }
 
 .popup-card_name {
-    font-size: 1.1rem;
+    font-size: 0.9rem;
+    margin-bottom: 4px;
 }
 
 .popup-card_info {
-    font-size: 1rem;
+    font-size: 0.9em;
     display: flex;
     flex-direction: column;
     gap: 5px;
